# squab

./: .gitignore  README.md  pyproject.toml
squab/: utils.py
squab/layers/: linear.py  projection.py  residual.py  skipgram_convolution.py
squab/models/: flat.py  projection_attention.py
