[project]
name = "squab"
version = "0.0.0"
description = "no"
authors = [
    {name = "kthwaite", email = "28732700+thwaite@users.noreply.github.com"},
]
dependencies = [
  "torch>=2.0.1",
  "pytorch-lightning>=2.0.1",
  "torch>=1.10",
  "lion-pytorch>=0.1.2",
  "torchmetrics>=0.11.4",
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {namespaces = false}

